--- a/anrfree/build.gradle
+++ b/anrfree/build.gradle
@@ -1,11 +1,10 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.ober.anrfree"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
