--- a/anrfree/build.gradle
+++ b/anrfree/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.lifecycle:lifecycle-process:2.5.1"
+
 }
