--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,6 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation project(":anrfree")
 }
